--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section class="invite-section" id="inviteSection">
       <div class="container">
         <h1 class="invitation-title">ЗАПРОШЕННЯ НА ВЕСІЛЛЯ</h1>
-        <p class="invitation-text">A & Y</p>
+        <p class="invitation-text">K & Y</p>
         <img
           class="inv-image"
           src="./img/inv-photo.jpg"
@@ -28,7 +28,7 @@
         </p>
         <audio
           id="weddingMusic"
-          src="./audio/IsakDanielsonPower.mp3"
+          src="./audio/AlexWarrenOrdinary.mp3"
         ></audio>
       </div>
     </section>
@@ -37,7 +37,7 @@
         <div class="pre-text">
           <p>
             Ми будемо щасливі розділити з вами радість події <br />
-            <span class="data">01 червня 2025</span> <br />З нагоди нашого
+            <span class="data">27 вересня 2025</span> <br />З нагоди нашого
             весілля
           </p>
         </div>
@@ -46,11 +46,11 @@
           <h2 class="location-title">Location</h2>
           <p class="location-text">
             Чекаємо Вас за адресою: <br />
-            м. Біла Церква, ресторан "Сад Мур"
+            м. Вінниця, ресторан "T-Bone"
           </p>
           <a
             class="location-button"
-            href="https://www.google.com/maps/place/%D0%A1%D0%B0%D0%B4%2FGarden.bc/@49.8146607,30.0574073,17z/data=!3m1!4b1!4m6!3m5!1s0x40d3430c9a833707:0x5c0c7574e9350370!8m2!3d49.8146607!4d30.0574073!16s%2Fg%2F11vybk1cc7?entry=ttu&g_ep=EgoyMDI1MDMzMC4wIKXMDSoJLDEwMjExNjQwSAFQAw%3D%3D"
+            href="https://www.google.com/maps/place/%D0%93%D1%80%D0%B8%D0%BB%D1%8C-%D1%80%D0%B5%D1%81%D1%82%D0%BE%D1%80%D0%B0%D0%BD+%D0%A2-bone/@49.2300191,28.4478762,17z/data=!3m1!4b1!4m6!3m5!1s0x472d5d484c6af665:0x98ed701d486c7336!8m2!3d49.2300191!4d28.4478762!16s%2Fg%2F11hn_q8r5k?entry=ttu&g_ep=EgoyMDI1MDcyMy4wIKXMDSoASAFQAw%3D%3D"
             rel="noreferer noopener"
             target="_blank"
             >Переглянути на мапі</a
@@ -66,23 +66,23 @@
         </h2>
         <ul class="timing-text-wrapper">
           <li class="line">
-            <h3>13:30</h3>
-            <p>Збір гостей в ресторані</p>
+            <h3>13:20</h3>
+            <p>Церемонія розпису в РАГСі</p>
           </li>
           <li class="line">
-            <h3>14:00</h3>
-            <p>Початок церемонії</p>
-          </li>
-           <li class="line">
             <h3>14:30</h3>
-            <p>Привітання молодят та фото з гостями</p>
+            <p>Збір гостей в ресторані</p>
           </li>
            <li class="line">
             <h3>15:00</h3>
+            <p>Привітання молодят та фото з гостями</p>
+          </li>
+           <li class="line">
+            <h3>15:30</h3>
             <p>Банкет</p>
           </li>
           <li class="line">
-            <h3>22:00</h3>
+            <h3>23:00</h3>
             <p>Фінал</p>
           </li>
         </ul>
@@ -96,22 +96,6 @@
           src="./img/dresscode-photo.jpg"
           alt="Наше фото 2"
         />
-        <div class="dresscode-wrapper">
-          <h2 class="dresscode-title">Dress<br />code</h2>
-          <p class="dresscode-text">
-            Нам буде особливо приємно, якщо ви підтримаєте <br />
-            кольори нашого весілля <br />
-            у своїх образах
-          </p>
-          <ul class="dresscode-list">
-            <li class="dresscode-item green"></li>
-            <li class="dresscode-item haki"></li>
-            <li class="dresscode-item white"></li>
-            <li class="dresscode-item beige"></li>
-            <li class="dresscode-item gray"></li>
-            <li class="dresscode-item black"></li>
-          </ul>
-        </div>
       </div>
     </section>
 
@@ -202,6 +186,7 @@
           Також ми створили телеграм-чат нашого свята, де можна буде поділитися
           фото та відео в день та після весілля
         </p>
+        <button class="telegram-button" type="button"  href="https://t.me/+quPOitb7UQQyNDU6">Telegram</button>
       </div>
     </section>
     <section class="timer-section section">
